<?xml version="1.0"?>
<package format="2">
  <name>point_lio</name>
  <version>0.0.0</version>
  <description>The point_lio package</description>

  <maintainer email="lion@todo.todo">lion</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_ros_driver2</depend>
  <export>

  </export>
</package>